--- a/extension/devtools/panel/styles.css
+++ b/extension/devtools/panel/styles.css
@@ -135,6 +135,12 @@ summary, details {
 
 #tree {
   margin: auto;
+  overflow:visible;
+  padding-top: 15px;
+}
+
+#treeG {
+  /* margin: 10px; */
 }
 
 .nodes {
@@ -147,7 +153,7 @@ summary, details {
   font: 12px sans-serif;
 }
 #tree-container {
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .button-bar {
