--- a/extension/devtools/panel/styles.css
+++ b/extension/devtools/panel/styles.css
@@ -168,3 +168,15 @@ summary {
   padding: 3px;
   opacity: 0.8;
 }
+
+#error-message {
+  color: #E06C75;
+  /* margin-left: 30px;
+  margin-top: 30px; */
+  margin-right: 400px;
+  margin-top:100px;
+  width: 400px;
+  height: 400px;
+  background-color: #242424;
+  font-size: large;
+} 
